--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -7,3 +7,8 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://rm-bp15h5a44683401mfso.mysql.rds.aliyuncs.com:3306/bbs-user?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    username: zjlhyy
+    password: Zjl10101028
