--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,11 +11,11 @@
         <!-- java版本 -->
         <java.version>1.8</java.version>
         <!-- SpringBoot版本 -->
-        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
         <!-- Spring Cloud Alibaba 版本 -->
-        <spring.cloud.alibaba>2.2.7.RELEASE</spring.cloud.alibaba>
+        <spring.cloud.alibaba>2.2.5.RELEASE</spring.cloud.alibaba>
         <!-- Spring Cloud 版本 -->
-        <spring.cloud>Hoxton.SR12</spring.cloud>
+        <spring.cloud>Hoxton.SR8</spring.cloud>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -52,6 +52,7 @@
             <version>3.4.3.1</version>
         </dependency>
 
+
     </dependencies>
 
     <!-- 版本依赖管理器 -->
@@ -82,6 +83,17 @@
                 <version>${spring.cloud}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>1.1.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-spring-context</artifactId>
+                <version>0.3.6</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
