--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -2,10 +2,15 @@ server:
   port: 8081
 spring:
   application:
-    name: bbs-user
+    name: user-service
   cloud:
     nacos:
       discovery:
+        server-addr: 127.0.0.1:8848
+      config:
+        file-extension: yaml
+        refresh-enabled: true
+        enabled: true
         server-addr: 127.0.0.1:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
