--- a/subject/pom.xml
+++ b/subject/pom.xml
@@ -49,6 +49,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.zjl</groupId>
             <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
