--- a/subject/src/main/resources/application.yaml
+++ b/subject/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ spring:
   application:
     name: subject-service
   cloud:
+    sentinel:
+      transport:
+        dashboard: 127.0.0.1:8080
+      filter:
+        enabled: false
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
