--- a/web-geteway/pom.xml
+++ b/web-geteway/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.zjl</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>user</artifactId>
+    <artifactId>web-gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>user</name>
     <description>User project</description>
@@ -16,34 +16,23 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
-            <version>3.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!-- mybatis-plus -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.4.3.1</version>
-        </dependency>
 
-
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba.nacos</groupId>-->
-<!--            <artifactId>nacos-client</artifactId>-->
-<!--            <version>2.0.3</version>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.zjl</groupId>
             <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+<!--            <scope>compile</scope>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-starter-web</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
     </dependencies>
 
