2022-08-14 commit by 笔记本

--- a/user/src/main/resources/bootstrap.yaml
+++ b/user/src/main/resources/bootstrap.yaml
@@ -9,6 +9,9 @@ spring:
     sentinel:
       transport:
         dashboard: 127.0.0.1:8080
+      web-context-unify: false
+      #饥饿加载
+      eager: true
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
