--- a/user/src/main/resources/bootstrap.yaml
+++ b/user/src/main/resources/bootstrap.yaml
@@ -5,6 +5,16 @@ spring:
     name: user-service
   profiles:
     active: dev
+  redis:
+    host: r-bp196lixccndz4ohh9pd.redis.rds.aliyuncs.com
+    port: 6379
+    pool:
+      max-active: 8
+      max-wait: 1
+      max-idle: 8
+      min-idle: 0
+    timeout: 0
+    password: Zjl10101028
   cloud:
     sentinel:
       transport:
