--- a/user/src/main/resources/bootstrap.yml
+++ b/user/src/main/resources/bootstrap.yml
@@ -24,7 +24,7 @@ spring:
       eager: true
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.1.7:8848
         metadata:
           version: v1      //自身版本
           targetVersion: v1 //目标版本
@@ -34,7 +34,7 @@ spring:
         file-extension: yaml
         refresh-enabled: true
         enabled: true
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.1.7:8848
         group: DEFAULT_GROUP
 #        namespace: 07447b75-1b34-4587-93ee-837fde975939
   #        extension-configs:
@@ -46,12 +46,12 @@ spring:
   #    url: jdbc:mysql://rm-bp15h5a44683401mfso.mysql.rds.aliyuncs.com:3306/bbs-user?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
   #    username: zjlhyy
   #spring:
-#  datasource:
-#    druid:
-#      driver-class-name: com.mysql.cj.jdbc.Driver
-#      url: jdbc:mysql://rm-bp15h5a44683401mfso.mysql.rds.aliyuncs.com:3306/bbs-user?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-#      username: zjlhyy
-#      password: Zjl10101028
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://rm-bp15h5a44683401mfso.mysql.rds.aliyuncs.com:3306/bbs-user?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+      username: zjlhyy
+      password: Zjl10101028
 
 mybatis-plus:
   configuration:
@@ -65,3 +65,31 @@ feign:
       default:
         read-timeout: 4
         connect-timeout: 4
+
+seata:
+  enabled: true
+  application-id: ${spring.application.name}
+  tx-service-group: ${spring.application.name}-group
+  enable-auto-data-source-proxy: true
+  service:
+    vgroup-mapping:
+      subject-service-group: SE
+    grouplist:
+      default: 127.0.0.1:8091
+  registry:
+    type: nacos
+    nacos: # tc
+      server-addr: 192.168.1.7:8848
+      #      namespace: ""
+      group: SEATA_GROUP
+      application: seata-server
+      cluster: SE
+  config:
+    type: nacos
+    nacos:
+      server-addr: 192.168.1.7:8848
+      #      namespace: ""
+      # 这是默认值
+      data-id: seataServer.properties
+      # 这是默认值
+      group: SEATA_GROUP
